--- a/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
+++ b/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
@@ -10,6 +10,8 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\**\*.sql" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
+    <None Remove="Modules\Inventory\Supplier\SupplierProdDialog.ts" />
+    <None Remove="Modules\Inventory\Supplier\SupplierProdGrid.ts" />
     <None Update="wwwroot\**\*">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
