--- a/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
+++ b/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
@@ -37,6 +37,9 @@
     <PackageReference Include="Serenity.Web" Version="3.13.7" />
     <PackageReference Include="Serenity.Web.Assets" Version="3.9.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\upload\Supplier\PrimaryImage\00000\" />
+  </ItemGroup>
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);COREFX;ASPNETCORE</DefineConstants>
   </PropertyGroup>
