--- a/Serene Web App/Serene Web App.Web/appsettings.json
+++ b/Serene Web App/Serene Web App.Web/appsettings.json
@@ -1,11 +1,15 @@
 ﻿{
   "Data": {
-    "Default": {
+    "oldDefault": {
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Serene_Web_App_Default_v1;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
     },
     "Northwind": {
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Serene_Web_App_Northwind_v1;Integrated Security=true",
+      "ProviderName": "System.Data.SqlClient"
+    },
+    "Default": {
+      "ConnectionString": "Server=den1.mssql8.gear.host;Database=sereneinvent;User ID=sereneinvent;Password=Gp8kuy!fF?4z",
       "ProviderName": "System.Data.SqlClient"
     }
   },
