--- a/Serene Web App/Serene Web App.Web/Dockerfile
+++ b/Serene Web App/Serene Web App.Web/Dockerfile
@@ -3,8 +3,13 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 443
+RUN curl -sL https://deb.nodesource.com/setup_10.x | bash -
+RUN apt-get install -y nodejs
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
+RUN curl -sL https://deb.nodesource.com/setup_10.x |  bash -
+RUN apt-get install -y nodejs
 WORKDIR /src
 COPY ["Serene Web App.Web/Serene Web App.Web.csproj", "Serene Web App.Web/"]
 RUN dotnet restore "Serene Web App.Web/Serene Web App.Web.csproj"
