--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,27 +3,36 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
+    - docker_heroku_support
+    
+    resources:
+    - repo: self
+    
     pool:
       vmImage: 'ubuntu-latest'
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '**/Dockerfile'
-        tags: |
-          $(tag)
+    
+    variables:
+      docf: 'Serene Web App.Web/Dockerfile'
+      tag: 'registry.heroku.com/serenity-inventory/web'
+      user: 'valzey87@gmail.com'
+    
+    stages:
+    - stage: Release
+      displayName: Release
+      jobs:  
+      - job: Release
+        displayName: Release
+        steps:
+        - task: PowerShell@2
+          displayName: Build
+          inputs:
+            targetType: 'inline'
+            script: 'cd "Serene Web App" && docker build -f "$(docf)" -t $(tag) .'
+        - task: PowerShell@2
+          displayName: Deploy
+          inputs:
+            targetType: 'inline'
+            script: |
+              docker login --username=$(user) --password=$(HEROKU_API_KEY) registry.heroku.com
+              docker push $(tag)
+              heroku container:release web -a serenity-inventory
