Added customer, product order, purchase order, purchase order items and shipment tables Implemented product order and purchase order but the products are not yet being updated

--- a/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
+++ b/Serene Web App/Serene Web App.Web/Serene Web App.Web.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\**\*.sql" Exclude="bin\**;obj\**;**\*.xproj;packages\**;@(EmbeddedResource)" />
+    <None Remove="Modules\Inventory\OrderItem\OrderItemsEditor.ts" />
     <None Remove="Modules\Inventory\Supplier\SupplierProdDialog.ts" />
     <None Remove="Modules\Inventory\Supplier\SupplierProdGrid.ts" />
     <TypeScriptCompile Remove="Modules\Inventory\Product\RowIndexFormatter.ts" />
