Made product quantity change during order Shipment now working other fixes

--- a/Serene Web App/Serene Web App.Web/appsettings.json
+++ b/Serene Web App/Serene Web App.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "Data": {
-    "Default": {
+    "DefaultDev": {
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Serene_Web_App_Default_v1;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
     },
@@ -8,7 +8,7 @@
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=Serene_Web_App_Northwind_v1;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
     },
-    "DefaultProd": {
+    "Default": {
       "ConnectionString": "Server=den1.mssql8.gear.host;Database=sereneinvent;User ID=sereneinvent;Password=Gp8kuy!fF?4z",
       "ProviderName": "System.Data.SqlClient"
     }
